--- a/templates/classify.html
+++ b/templates/classify.html
@@ -11,7 +11,7 @@
         </tr>
         <tr>
           <td>画像ファイル</td>
-          <td><img src={{ img_url }} alt="画像が見つかりませんでした。"></img></td>
+          <td><img src={{ img_link }} alt="画像が見つかりませんでした。"></img></td>
         </tr>
         <tr>
           <td>信頼度</td>
